refactor : custom Exception 적용